# top-n-holders-risk0

./: .gitignore  Cargo.toml  Makefile
core/: Cargo.toml
core/src/: lib.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
