[workspace]
members = ["host", "methods"]
resolver = "2"

[workspace.dependencies]

risc0-zkvm = { version = "2.0.2", features = ["metal"] }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3