[workspace]
members = ["host", "methods", "core"]
resolver = "2"

[workspace.dependencies]

alloy = { version = "1.0.1", features = ["full"] }
alloy-primitives = { version = "1.1", features = ["rlp", "serde", "std"] }

risc0-zkvm = { version = "2.0.2", features = ["prove"] }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0" }

top-n-holders-core = { path = "core" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3