[package]
name = "top-n-holders-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
alloy-primitives = { version = "1.1.0", features = ["serde"] } # For Address and U256 types