[package]
name = "top-n-holders-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
top-n-holders-core = { workspace = true }

alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { version = "1.0.219", features = ["derive"]}
risc0-steel = { workspace = true, features = ["default", "unstable-verifier"] }
#risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.0.2" }
risc0-zkvm = { version = "2.0.2", default-features = false, features = [
    "std",
] }