[package]
name = "top-n-holders-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
top-n-holders-core = { path = "../../core" }

alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0" }
serde = { version = "1.0.219", features = ["derive"]}
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0" }
risc0-zkvm = { version = "2.0.2", default-features = false, features = ["std", "unstable"] }
sha2 = "=0.10.8"
k256 = { version = "=0.13.4", features = [
    "arithmetic",
    "serde",
    "expose-field",
    "std",
    "ecdsa",
], default-features = false }
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
